the chunks with the footer function definition and call do not have to be displayedvia echo, only EVAL'd

--- a/inst/extdata/reportTemplate.Rmd
+++ b/inst/extdata/reportTemplate.Rmd
@@ -377,7 +377,7 @@ citation("pcaExplorer")
 sessionInfo()
 ```
 
-```{r}
+```{r, echo = FALSE}
 library(shiny)
 footertemplate <- function(){
   tags$div(
@@ -398,6 +398,6 @@ footertemplate <- function(){
 }
 ```
 
-```{r}
+```{r, echo = FALSE}
 footertemplate()
 ```
