added full stop to report sentence

--- a/inst/extdata/reportTemplate.Rmd
+++ b/inst/extdata/reportTemplate.Rmd
@@ -3,7 +3,7 @@
 This content has been loaded from the template report `.Rmd` file. Please edit it at your best convenience!
 
 If you are viewing this report in the Preview, you might require the installation of the PhantomJS to render correctly some HTML widgets. 
-This can be done by using the `r BiocStyle::CRANpkg("webshot")` package and calling `webshot::install_phantomjs()`
+This can be done by using the `r BiocStyle::CRANpkg("webshot")` package and calling `webshot::install_phantomjs()`.
 
 ```{r setup, include=FALSE, eval = TRUE, echo = FALSE}
 opts_chunk$set(
