--- a/inst/extdata/reportTemplate.Rmd
+++ b/inst/extdata/reportTemplate.Rmd
@@ -199,7 +199,7 @@ if(!is.null(input$pcagenes_brush))
   
     mycolss <- c("#313695","#4575b4","#74add1","#abd9e9","#e0f3f8","#fee090","#fdae61","#f46d43","#d73027","#a50026") # to be consistent with red/blue usual coding
   
-    d3heatmap(toplot,Colv = as.logical(input$heatmap_colv),colors = mycolss)
+    heatmaply(toplot,Colv = as.logical(input$heatmap_colv),colors = mycolss)
   }
 }
 
